test/spec_vectors/f64/fail/module_7.wat
(module (func (result f64) (f64.ceil (i64.const 0))))